Add DatabaseConfig class for production database configuration; update SecurityConfig and application-prod.yml for improved CORS handling